# llmfor1c

./: .gitignore  METHODIC_1C.md  ONEC_HTTP_SERVICE_QUERYAPI_MODULE.txt  README.md  bench_spider1c_5.json  pyproject.toml  бенчкоманд.md
data/: bench_spider1c.json  bench_spider1c_10.json  bench_spider1c_5.json  bench_spider1c_5_claude_opus_4_1.json  bench_spider1c_5_glm46v_flash.json  bench_spider1c_smoke.json  chat_questions_export.csv  erp-large.db  erp-medium.db  stage1_demo.db  test_stage1.db  примеры_для_отчета.txt
data/data_1c_teach/: 01 ПредметыУчителяКабинеты.dt  02 ПерваяНеделяСентября.dt  03 ВизуальноеКонструированиеИтог.dt  04 НомераДокументов.dt  05 КопированиеУчебныхДней.dt  06 ОтчетУспеваемость.dt  07 ОтчетПрошедшиеЗанятия.dt  08 РегистрДомашниеЗадания.dt  09 Планировщик.dt  10 ОкончательныйВариант.dt
data/data_bench/: bench_spider1c_50_claude_opus_4_1.json  bench_spider1c_50_glm46v_flash.json  bench_spider1c_50_gpt_5-3_codex.json  model_metrics_summary.json
data/data_bench/bench_compare_3models/: clause_confusion.csv  error_signatures_by_model.csv  model_summary.csv  pairwise_cosine_win.csv  pairwise_exec_win.csv  pairwise_latency_win.csv  pairwise_quality_win.csv  similarity_success_bins.csv  summary.md
src/vkr_stage1/: chat_cli.py  chat_nl_history_cli.py  main.py  onec_check.py
src/vkr_stage1/agents/: router.py  service.py
src/vkr_stage1/api/: server.py
src/vkr_stage1/connectors/: onec_connector.py  sql_connector.py
tests/: test_agent_router.py  test_agent_service.py  test_api_server.py  test_nl2sql_pipeline.py
(+8 files in other folders)
